prevent styled qr code canvas corners poking out on safari

--- a/packages/web-client/app/components/styled-qr-code/index.css
+++ b/packages/web-client/app/components/styled-qr-code/index.css
@@ -10,4 +10,5 @@
 .styled-qr-code > canvas {
   width: 18.75rem; /* 300px */
   max-width: 100%;
+  border-radius: 2.5rem;
 }
